[metadata]
name = textform
version = 0.10.4
author = Richard Wesley
author_email = hawkfish@electricfish.com
description = A text shaping package.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hawkfish/textform
project_urls =
    Bug Tracker = https://github.com/hawkfish/textform/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
